Fixed password displaying, event is now passed correctly, added more space for table of passwords on mobile devices

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     display: grid;
     grid-gap: 0.3%;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 15% 1fr 1fr 1fr 15%;
+    grid-template-rows: 15% 2fr 1fr 1fr 15%;
     grid-template-areas: 
         "h h h h h h h h h h h h"
         "sp sp sp sp sp sp sp sp sp sp sp sp"
